first screen almost done

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
 
       <ul class="header_wrap">
-        <li><a class="header_link" href="#">About</a></li>
+        <li><a class="header_link current" href="#">About</a></li>
         <li><a class="header_link" href="#">Syllabus</a></li>
         <li><a href="#"><img src="/assets/Vector.png" alt="logo" class='logo'></a></li>
         <li><a class="header_link" href="#">Projects</a></li>
@@ -21,19 +21,19 @@
 
     </header>
 
-    <h1>YOUR LIFE IS WEBDEV</h1>
+    <h1 class="title">YOUR LIFE IS WEBDEV</h1>
 
-    <p>Whatever the approach to development may be, the final program must satisfy some fundamental properties</p>
+    <p class='content_first_screen'>Whatever the approach to development may be, the final <br> program must satisfy some fundamental properties</p>
 
-    <button>GET STARTED</button>
+    <button class="get_started">GET STARTED</button>
 
     <div class='socials'>
       
       <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li><a href="#"><img src="/assets/gmail.png" alt="gmail" class='social_icons'></li>
+        <li><a href="#"><img src="/assets/facebook.png" alt="facebook" class='social_icons'></li>
+        <li><a href="#"><img src="/assets/inst.png" alt="instagram" class='social_icons'></li>
+        <li><a href="#"><img src="/assets/youtube.png" alt="youtube" class='social_icons'></li>
       </ul>
 
     </div>
