second screen almost done

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   <title>Webdev</title>
   <link rel="stylesheet" href="/style.css">
 </head>
+
 <body>
+
   <div class='first_screen'>
 
     <header>
@@ -27,20 +29,36 @@
 
     <button class="get_started">GET STARTED</button>
 
-    <div class='socials'>
+    <div class="socials_wrap">
       
-      <ul>
-        <li><a href="#"><img src="/assets/gmail.png" alt="gmail" class='social_icons'></li>
-        <li><a href="#"><img src="/assets/facebook.png" alt="facebook" class='social_icons'></li>
-        <li><a href="#"><img src="/assets/inst.png" alt="instagram" class='social_icons'></li>
-        <li><a href="#"><img src="/assets/youtube.png" alt="youtube" class='social_icons'></li>
+      <ul class='socials'>
+
+        <li class='social_icons'><a href="#"><img src="/assets/gmail.png" alt="gmail"></a></li>
+        <li class='social_icons'><a href="#"><img src="/assets/facebook.png" alt="facebook"></a></li>
+        <li class='social_icons'><a href="#"><img src="/assets/inst.png" alt="instagram"></a></li>
+        <li class='social_icons'><a href="#"><img src="/assets/youtube.png" alt="youtube"></a></li>
+
       </ul>
 
     </div>
 
   </div>
 
-  <div class="second_screen"></div>
+  <div class="second_screen">
+
+    <div class="second_screen_text_block">
+
+      <h2 class="second_title">Rappresent your idea with<br> a smart Design</h2>
+
+      <p class="content_second_screen">Tasks accompanying and related to programming include: testing, debugging, source code maintenance, <strong>implementation of build systems</strong>, and management of derived artifacts, such as the machine code of computer programs.</p>
+
+      <button class="second_screen_button">GET STARTED</button>
+
+    </div>
+
+    <img src="/assets/content-image-1.jpg" alt="smart_design">
+
+  </div>
   
 </body>
 </html>
