third screen process

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
 
     <h1 class="title">YOUR LIFE IS WEBDEV</h1>
 
-    <p class='content_first_screen'>Whatever the approach to development may be, the final <br> program must satisfy some fundamental properties</p>
+    <p class='content_first_screen'>
+      Whatever the approach to development may be, the final <br> program must satisfy some fundamental properties
+    </p>
 
     <button class="get_started">GET STARTED</button>
 
@@ -48,15 +50,53 @@
 
     <div class="second_screen_text_block">
 
-      <h2 class="second_title">Rappresent your idea with<br> a smart Design</h2>
+      <h2 class="second_title">
+        Rappresent your idea with<br> a smart Design
+      </h2>
 
-      <p class="content_second_screen">Tasks accompanying and related to programming include: testing, debugging, source code maintenance, <strong>implementation of build systems</strong>, and management of derived artifacts, such as the machine code of computer programs.</p>
+      <p class="content_second_screen">
+        Tasks accompanying and related to programming include: testing, debugging, source code maintenance, <strong>implementation of build systems</strong>, and management of derived artifacts, such as the machine code of computer programs.
+      </p>
 
       <button class="second_screen_button">GET STARTED</button>
 
     </div>
 
     <img src="/assets/content-image-1.jpg" alt="smart_design">
+
+  </div>
+
+  <div class="third_screen">
+
+    <div class="third_screen_text_block">
+
+      <img src="/assets/userpic.png" alt="userpic">
+
+      <h2 class="third_title">OUR COMMUNITY</h2>
+
+      <p class="content_third_screen">
+        A hacker is any skilled computer expert that uses their technical knowledge to overcome a problem, but it can also mean a security hacker in common language
+      </p>
+
+    </div>
+
+  </div>
+
+  <div class="fourth_screen">
+
+    <img src="/assets/content-image-2.jpg" alt="implement_right_code">
+
+    <div class="fourth_screen_text_block">
+
+      <h2 class="fourth_title">Implement right Code</h2>
+
+      <p class="content_fourth_screen">
+        These might be considered part of the <strong>programming process</strong>, but often the term software development is used for this larger process with the term programming, implementation.
+      </p>
+
+      <button class="fourth_screen_button">LEARN MORE</button>
+
+    </div>
 
   </div>
   
