--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Webdev</title>
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -16,7 +16,7 @@
       <ul class="header_wrap">
         <li><a class="header_link current" href="#">About</a></li>
         <li><a class="header_link" href="#">Syllabus</a></li>
-        <li><a href="#"><img src="/assets/Vector.png" alt="logo" class='logo'></a></li>
+        <li><a href="#"><img src="assets/Vector.png" alt="logo" class='logo'></a></li>
         <li><a class="header_link" href="#">Projects</a></li>
         <li><a class="header_link" href="#">FAQ</a></li>
       </ul>
@@ -35,10 +35,10 @@
       
       <ul class='socials'>
 
-        <li class='social_icons'><a href="#"><img src="/assets/gmail.png" alt="gmail"></a></li>
-        <li class='social_icons'><a href="#"><img src="/assets/facebook.png" alt="facebook"></a></li>
-        <li class='social_icons'><a href="#"><img src="/assets/inst.png" alt="instagram"></a></li>
-        <li class='social_icons'><a href="#"><img src="/assets/youtube.png" alt="youtube"></a></li>
+        <li class='social_icons'><a href="#"><img src="assets/gmail.png" alt="gmail"></a></li>
+        <li class='social_icons'><a href="#"><img src="assets/facebook.png" alt="facebook"></a></li>
+        <li class='social_icons'><a href="#"><img src="assets/inst.png" alt="instagram"></a></li>
+        <li class='social_icons'><a href="#"><img src="assets/youtube.png" alt="youtube"></a></li>
 
       </ul>
 
@@ -62,7 +62,7 @@
 
     </div>
 
-    <img src="/assets/content-image-1.jpg" alt="smart_design">
+    <img src="assets/content-image-1.jpg" alt="smart_design">
 
   </div>
 
@@ -70,7 +70,7 @@
 
     <div class="third_screen_text_block">
 
-      <img src="/assets/userpic.png" alt="userpic">
+      <img src="assets/userpic.png" alt="userpic">
 
       <h2 class="third_title">OUR COMMUNITY</h2>
 
@@ -84,7 +84,7 @@
 
   <div class="fourth_screen">
 
-    <img src="/assets/content-image-2.jpg" alt="implement_right_code">
+    <img src="assets/content-image-2.jpg" alt="implement_right_code">
 
     <div class="fourth_screen_text_block">
 
