--- a/index.html
+++ b/index.html
@@ -66,8 +66,10 @@
 
   </div>
 
-  <div class="third_screen">
+   <div class="third_screen">
 
+    <div class="third_screen_first_column">
+    
     <div class="third_screen_text_block">
 
       <img src="assets/userpic.png" alt="userpic">
@@ -78,6 +80,29 @@
         A hacker is any skilled computer expert that uses their technical knowledge to overcome a problem, but it can also mean a security hacker in common language
       </p>
 
+    </div>
+    
+    </div>
+
+    <div class="third_screen_second_column">
+
+    <div class="slider">
+
+      <div class="slider_nav_items">
+
+        <div class="left_arrow"><</div>
+
+        <div class="slide_number">1</div>
+
+        <div>/</div>
+
+        <div class="slide_quantity">5</div>
+
+        <div class="right_arrow">></div>
+
+      </div>
+
+    </div>
     </div>
 
   </div>
