--- a/index.html
+++ b/index.html
@@ -90,15 +90,23 @@
 
       <div class="slider_nav_items">
 
-        <div class="left_arrow"><</div>
+        <div class="left_arrow"><img src="assets/arrow-left.png" alt="left_arrow"></div>
 
-        <div class="slide_number">1</div>
+        <div class="slide_count">
 
-        <div>/</div>
+          <div class="slide_number">1</div>
+          <div>/</div>
+          <div class="slide_quantity">5</div>
 
-        <div class="slide_quantity">5</div>
+        </div>
 
-        <div class="right_arrow">></div>
+        <div class="right_arrow"><img src="assets/arrow-right.png" alt="right_arrow"></div>
+
+      </div>
+
+      <div class="slides">
+
+        <img class="slider_img_1" src="assets/slider-item1.jpg" alt="slide_1"><img class="slider_img_2" src="assets/slider-item2.jpg" alt="slide_2"><img class="slider_img_3" src="assets/slider-item3.jpg" alt="slide_3">
 
       </div>
 
